# grubberbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dev.py  docker-compose-bot.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  docker_test.py  environment.yml  mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: docker_tests.yaml  unittests.yaml
alembic/: env.py
alembic/versions/: 1df1a0cbadab_add_tts_table.py  20bed5e1df6b_.py  350251f34a1d_rapid_league_users.py  ae978d48aa08_initial_tables.py
discord/: funcs_discord.py  funcs_general.py
grubberbot/: bot.py  funcs_discord.py  funcs_general.py  funcs_league.py
grubberbot/templates/: index.html
grubberbot/templates/styles/: main.css
requirements/: dev.in  dev.txt  prod.in  prod.txt
src/grubberbot/: __init__.py
src/grubberbot/discord/: __init__.py  bot.py  rapid_league.py
src/grubberbot/google/: __init__.py  database.py
src/grubberbot/sanity/: __init__.py
src/grubberbot/twitch/: __init__.py  models.json  test_ml_tts.py  tts.py
src/grubberbot/utils/: __init__.py  chesscom.py  database.py  funcs.py  google.py  other.py
src/sanity/: __init__.py
tests/sanity/: test_example.py
tests/utils/: test_database.py  test_sanity.py
twitch/: bot.py
